[project]
name = "simple-quiz"
version = "0.1.0"
description = ""
authors = [
    {name = "arudenko",email = "arudenko@corp.finam.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
]

[tool.poetry]
packages = [{include = "simple_quiz", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
